Made check-ins visible on locations and fixed an issue where pages wouldn't display items if a manager has multiple teams.

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -22,3 +22,8 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.scroller {
+    height: 150px;
+    overflow-y: scroll;
+}
